# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1281 2010-08-10 14:45:07 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta2 (2010/??/??)
 - (2010/08/10) Fixed bug#5579 - Spaces in filenames are converted to + characters
    when downloading in IE.
 - (2010/08/10) Fixed bug#5701 - Tarball includes empty directories.
 - (2010/08/10) Fixed bug#5255 - Accessibility: "ALL" link when selecting an owner
 - (2010/08/10) Fixed bug#5694 - Images in web based installer are not displayed
    when performing installation from source.
 - (2010/08/09) Fixed bug#5661 - In Global Ticket Overview, with IE7 and L-Mode,
    Hover of first Ticket overlaps Action Row Area.
 - (2010/08/09) Fixed bug#5633 - Customer user information is not shown in
    ticket zoom if it was set by AgentTicketCustomer.
 - (2010/08/06) Fixed bug#5676 - Ticket Free Time selection in customer panel is
    broken, because wrong "for" statement inside Label.
 - (2010/08/06) Fixed bug#5691 - Not possbible for a package to modify a file
    that belongs to another package.
 - (2010/08/06) Fixed bug#5690 - In AgentTicketZoom, "reset filter" get's not
    taken over for next relogin.
 - (2010/08/06) Fixed bug#5659 - In Global Ticket Overview, Small View,
    "FROM/SUBJECT" is problematically to read. now it reads "FROM / SUBJECT".
 - (2010/08/06) Fixed bug#5628 - In new Ticket Search, the attribute
    TicketCreateTime, Wording is wrong + Checkbox is not longer needed.
 - (2010/08/06) Fixed bug#5645 - Changing the ticket search options does not
    work.
 - (2010/08/06) Fixed bug#5627 - "Fulltext" attribute in new ticket search
    feature is missing on initial use.
 - (2010/08/06) Fixed bug#5663 - In Global Ticket Overview, in M+L Mode, orange