@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1281 2010-08-10 14:45:07 martin Exp $
+# $Id: CHANGES,v 1.1282 2010-08-11 15:23:23 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,9 @@
 # --
 
 3.0.0 beta2 (2010/??/??)
+ - (2010/08/11) Fixed bug#5650 - Height of the article list is not retained.
+ - (2010/08/11) Fixed bug#5684 - Drag&Drop in agent dashboard is not working
+    with IE7.
  - (2010/08/10) Fixed bug#5579 - Spaces in filenames are converted to + characters
     when downloading in IE.
  - (2010/08/10) Fixed bug#5701 - Tarball includes empty directories.
